--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Jared Putz</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/download.png" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
         <div class="subheading mb-5">(810) 728-8372 
           <a href="mailto:name@email.com">jlputz@svsu.edu</a>
         </div>
-        <p class="lead mb-5">I am experienced in </p>
+        <p class="lead mb-5">I am a Senior studying Computer Information Systems at Saginaw Valley State University. My interests are in web design and UI design.  </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
