--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Jared 
-          <span class="text-primary">Putz</span>
+        <h1 class="mb-0">Jared Putz 
+         
         </h1>
         <div class="subheading mb-5">(810) 728-8372 
           <a href="mailto:name@email.com">jlputz@svsu.edu</a>
