--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Jared Putz 
-         
+        <h1 class="mb-0">Jared Putz     
         </h1>
         <div class="subheading mb-5">(810) 728-8372 
-          <a href="mailto:name@email.com">jlputz@svsu.edu</a>
+          <a href="mailto:jlputz@svsu.edu">jlputz@svsu.edu</a>
         </div>
         <p class="lead mb-5">I am a Senior studying Computer Information Systems at Saginaw Valley State University. My interests are in web design and UI design.  </p>
         <div class="social-icons">
