--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="subheading mb-5">(810) 728-8372 
           <a href="mailto:jlputz@svsu.edu">jlputz@svsu.edu</a>
         </div>
-        <p class="lead mb-5">I am a Senior studying Computer Information Systems at Saginaw Valley State University. My interests are in web design and UI design.  </p>
+        <p class="lead mb-5">I am a Senior studying Computer Information Systems at Saginaw Valley State University. My main interests are in web design and UI design.  </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
