--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">Jared Putz     
-        </h1>
+        </h1>      
+        <div class="subheading mb-5">Saginaw, MI    
+        </div>
         <div class="subheading mb-5">(810) 728-8372 
+        </div>
+        <div class="subheading mb-5">
           <a href="mailto:jlputz@svsu.edu">jlputz@svsu.edu</a>
         </div>
         <p class="lead mb-5">I am a Senior studying Computer Information Systems at Saginaw Valley State University. My main interests are in web design and UI design.  </p>
