--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="w-100">
         <h1 class="mb-0">Jared Putz     
         </h1>      
-        <div class="subheading mb-5">Saginaw, MI | (810) 728-8372 | <a href="mailto:jlputz@svsu.edu">jlputz@svsu.edu    Email</a>    
+        <div class="subheading mb-5">Saginaw, MI | (810) 728-8372 | <a href="mailto:jlputz@svsu.edu">jlputz@svsu.edu</a>    
         </div>
       
         <p class="lead mb-5">I am a Senior studying Computer Information Systems at Saginaw Valley State University. My main interests are in web design and UI design.  </p>
