--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       
         <p class="lead mb-5">I am a Senior studying Computer Information Systems at Saginaw Valley State University. My main interests are in web design and UI design.  </p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/jared-putz/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/jlputz">
             <i class="fab fa-github"></i>
           </a>
          
