--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
     </section>
-<!-- 
+ 
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
@@ -80,19 +80,36 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Software Developer Intern</h3>
+            <div class="subheading mb-3">PF Markey2</div>
+            <p><ul>
+                <li>
+                  Create customer web portals to allow customers to view statistical reporting data from PF Markey’s
+                  tooling vending machines such as cost per unit produced, transaction history, in stock percentages and
+                  more using ASP.NET and C#.
+                </li>
+                <li>
+                  Create visitor portal web application to allow site visitors to sign in and out and select which employee
+                  they will be meeting with using ASP.NET and C#.
+
+                </li>
+                <li>
+                  Implement and manage dynamic, informational web pages displayed on TV monitors throughout the
+                  work sites that provided relevant company information.
+
+                </li>
+
+            </ul></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">May 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
+            <h3 class="mb-0">IT Database Co-Op</h3>
+            <div class="subheading mb-3">Nexteer Automotive</div>
             <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -111,21 +128,12 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
+
 
       </div>
 
     </section>
-
+<!--
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
