--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Software Developer Intern</h3>
-            <div class="subheading mb-3">PF Markey2</div>
+            <div class="subheading mb-3">PF Markey</div>
             <p><ul>
                 <li>
                   Create customer web portals to allow customers to view statistical reporting data from PF Markey’s
@@ -110,21 +110,21 @@
           <div class="resume-content">
             <h3 class="mb-0">IT Database Co-Op</h3>
             <div class="subheading mb-3">Nexteer Automotive</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">September 2017 - May 201</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Web & Social Media Editor</h3>
+            <div class="subheading mb-3">The Valley Vanguard Newspaper</div>
+            <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">June 2017 - June 2018</span>
           </div>
         </div>
 
