--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
           <div class="resume-content">
             <h3 class="mb-0">Software Developer Intern</h3>
             <div class="subheading mb-3">PF Markey</div>
-            <p><ul>
+            <p>
+              <ul>
                 <li>
                   Create customer web portals to allow customers to view statistical reporting data from PF Markey’s
                   tooling vending machines such as cost per unit produced, transaction history, in stock percentages and
@@ -91,15 +92,13 @@
                 <li>
                   Create visitor portal web application to allow site visitors to sign in and out and select which employee
                   they will be meeting with using ASP.NET and C#.
-
                 </li>
                 <li>
                   Implement and manage dynamic, informational web pages displayed on TV monitors throughout the
                   work sites that provided relevant company information.
-
                 </li>
-
-            </ul></p>
+            </ul>
+          </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Present</span>
@@ -110,7 +109,27 @@
           <div class="resume-content">
             <h3 class="mb-0">IT Database Co-Op</h3>
             <div class="subheading mb-3">Nexteer Automotive</div>
-            <p></p>
+            <p>
+                <ul>
+                    <li>
+                        Manage a Siemens Teamcenter database used by product engineers and manufacturing engineers to
+                        ensure their plant documents such as work instructions, quality control documents and tooling drawings
+                        are accessible and accurate at all times.
+                    </li>
+                    <li>
+                        Work with plant managers, manufacturing, quality and industrial engineers to accurately build a
+                        database structure of all machines and assembly lines within the seven Saginaw plant locations.
+                    </li>
+                    <li>
+                        Enforce plant standardization with the implementation of Standard Machine Designs, which ensured all
+                        global Nexteer locations used standardized machine documents.
+                    </li>
+                    <li>
+                        Programming in HTML/CSS/Javascript for new SharePoint intranet site functionality. Programs include
+                        user feedback systems, search capabilities, page design and more.
+                    </li>
+                </ul>
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2017 - May 201</span>
@@ -121,7 +140,22 @@
           <div class="resume-content">
             <h3 class="mb-0">Web & Social Media Editor</h3>
             <div class="subheading mb-3">The Valley Vanguard Newspaper</div>
-            <p></p>
+            <p>
+                <ul>
+                    <li>
+                        Manage Valley Vanguard Wordpress website, with an average of 5,000 visits per month, by updating with
+                        current news stories and advertisements weekly
+                    </li>
+                    <li>
+                        Schedule Facebook and Twitter posts to be posted 4-5 times daily during the school week.
+                    </li>
+                    <li>
+                        Interact with 2,600 Facebook users and 1,200 Twitter users on The Valley Vanguard social media pages
+                        daily.
+                    </li>
+                </ul>
+
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2017 - June 2018</span>
