--- a/index.html
+++ b/index.html
@@ -83,21 +83,7 @@
             <h3 class="mb-0">Software Developer Intern</h3>
             <div class="subheading mb-3">PF Markey</div>
             <p>
-              <ul>
-                <li>
-                  Create customer web portals to allow customers to view statistical reporting data from PF Markey’s
-                  tooling vending machines such as cost per unit produced, transaction history, in stock percentages and
-                  more using ASP.NET and C#.
-                </li>
-                <li>
-                  Create visitor portal web application to allow site visitors to sign in and out and select which employee
-                  they will be meeting with using ASP.NET and C#.
-                </li>
-                <li>
-                  Implement and manage dynamic, informational web pages displayed on TV monitors throughout the
-                  work sites that provided relevant company information.
-                </li>
-            </ul>
+              Focus on creating web solutions for both internal and external use. Collecting and manipulating customer data to form statistical graphing on web pages. 
           </p>
           </div>
           <div class="resume-date text-md-right">
@@ -110,25 +96,7 @@
             <h3 class="mb-0">IT Database Co-Op</h3>
             <div class="subheading mb-3">Nexteer Automotive</div>
             <p>
-                <ul>
-                    <li>
-                        Manage a Siemens Teamcenter database used by product engineers and manufacturing engineers to
-                        ensure their plant documents such as work instructions, quality control documents and tooling drawings
-                        are accessible and accurate at all times.
-                    </li>
-                    <li>
-                        Work with plant managers, manufacturing, quality and industrial engineers to accurately build a
-                        database structure of all machines and assembly lines within the seven Saginaw plant locations.
-                    </li>
-                    <li>
-                        Enforce plant standardization with the implementation of Standard Machine Designs, which ensured all
-                        global Nexteer locations used standardized machine documents.
-                    </li>
-                    <li>
-                        Programming in HTML/CSS/Javascript for new SharePoint intranet site functionality. Programs include
-                        user feedback systems, search capabilities, page design and more.
-                    </li>
-                </ul>
+                Assisted with computer-based logistical pre-launch activities for innovative programs. Participated in on-line training coordination, database maintenance, and helping to launch new technologies. Assisted with the monitoring of several other key logistical and supply management elements to insure perfect launch of various platforms.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -141,20 +109,7 @@
             <h3 class="mb-0">Web & Social Media Editor</h3>
             <div class="subheading mb-3">The Valley Vanguard Newspaper</div>
             <p>
-                <ul>
-                    <li>
-                        Manage Valley Vanguard Wordpress website, with an average of 5,000 visits per month, by updating with
-                        current news stories and advertisements weekly
-                    </li>
-                    <li>
-                        Schedule Facebook and Twitter posts to be posted 4-5 times daily during the school week.
-                    </li>
-                    <li>
-                        Interact with 2,600 Facebook users and 1,200 Twitter users on The Valley Vanguard social media pages
-                        daily.
-                    </li>
-                </ul>
-
+                Focused primarily on updating the Vanguard's website with the current weekly issue and advertisements. Engaged with follows on various social media platforms. Created unique content to be posted onto social media.
             </p>
           </div>
           <div class="resume-date text-md-right">
