--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
         </li>
       </ul>
     </div>
+    <div class="social-icons">
+        <a href="https://www.linkedin.com/in/jared-putz/">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/jlputz">
+          <i class="fab fa-github"></i>
+        </a>
+       
+      </div>
   </nav>
 
   <div class="container-fluid p-0">
