--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         <a href="https://github.com/jlputz">
           <i class="fab fa-github"></i>
         </a>
-       
+        <a href="mailto:jlputz@svsu.edu">
+          <i class="fas fa-envelope"></i>
+        </a>
       </div>
   </nav>
 
