relocated experience dates

--- a/index.html
+++ b/index.html
@@ -84,12 +84,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Software Developer Intern</h3>
             <div class="subheading mb-3">PF Markey</div>
+            <p>May 2019 - Present</p>
             <p>
               Focus on creating web solutions for both internal and external use. Collecting and manipulating customer data to form statistical graphing on web pages. 
           </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">May 2019 - Present</span>
           </div>
         </div>
 
@@ -97,12 +95,10 @@
           <div class="resume-content">
             <h3 class="mb-0">IT Database Co-Op</h3>
             <div class="subheading mb-3">Nexteer Automotive</div>
+            <p>September 2017 - May 2019</p>
             <p>
                 Assisted with computer-based logistical pre-launch activities for innovative programs. Participated in on-line training coordination, database maintenance, and helping to launch new technologies. Assisted with the monitoring of several other key logistical and supply management elements to insure perfect launch of various platforms.
             </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2017 - May 2019</span>
           </div>
         </div>
 
@@ -110,19 +106,13 @@
           <div class="resume-content">
             <h3 class="mb-0">Web & Social Media Editor</h3>
             <div class="subheading mb-3">The Valley Vanguard Newspaper</div>
+            <p>June 2017 - June 2018</p>
             <p>
                 Focused primarily on updating the Vanguard's website with the current weekly issue and advertisements. Engaged with follows on various social media platforms. Created unique content to be posted onto social media.
             </p>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017 - June 2018</span>
-          </div>
         </div>
-
-
-
       </div>
-
     </section>
 <!--
     <hr class="m-0">
