--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
       </ul>
     </div>
@@ -126,8 +126,8 @@
           <div class="resume-content">
             <h3 class="mb-0">University of Colorado Boulder</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <div>Computer Information Systems</div>
+            <p>GPA: 3.62/4.0</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2006 - May 2010</span>
@@ -147,6 +147,7 @@
 
       </div>
     </section>
+  -->
 
     <hr class="m-0">
 
@@ -154,7 +155,7 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Programming Languages &amp; Software Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
@@ -194,24 +195,8 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
-      </div>
     </section>
--->
+
     <hr class="m-0">
 <!--
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
