--- a/index.html
+++ b/index.html
@@ -157,42 +157,31 @@
 
         <div class="subheading mb-3">Programming Languages &amp; Software Tools</div>
         <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
+          <li class="list-inline-item">HTML
             <i class="fab fa-html5"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item">CSS
             <i class="fab fa-css3-alt"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item">JavaScript
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+          <li class="list-inline-item">ASP.NET
+              <i class="fab fa-windows"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+          <li class="list-inline-item">VB.NET
+              <i class="fab fa-windows"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+          <li class="list-inline-item">C#
+              <i class="fab fa-windows"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
+          <li class="list-inline-item">SQL
+              <i class="fas fa-database"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+          <li class="list-inline-item">Java
+              <i class="fab fa-java"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
+
         </ul>
 
     </section>
