--- a/index.html
+++ b/index.html
@@ -157,28 +157,28 @@
 
         <div class="subheading mb-3">Programming Languages &amp; Software Tools</div>
         <ul class="list-inline dev-icons">
-          <li class="list-inline-item">HTML
+          <li>HTML
             <i class="fab fa-html5"></i>
           </li>
-          <li class="list-inline-item">CSS
+          <li>CSS
             <i class="fab fa-css3-alt"></i>
           </li>
-          <li class="list-inline-item">JavaScript
+          <li>JavaScript
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">ASP.NET
+          <li >ASP.NET
               <i class="fab fa-windows"></i>
           </li>
-          <li class="list-inline-item">VB.NET
+          <li >VB.NET
               <i class="fab fa-windows"></i>
           </li>
-          <li class="list-inline-item">C#
+          <li >C#
               <i class="fab fa-windows"></i>
           </li>
-          <li class="list-inline-item">SQL
+          <li >SQL
               <i class="fas fa-database"></i>
           </li>
-          <li class="list-inline-item">Java
+          <li >Java
               <i class="fab fa-java"></i>
           </li>
 
