--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Software Tools</div>
+        <div class="subheading mb-3">Programming Languages </div>
         <ul class="list-inline dev-icons">
-          <li>HTML
-            <i class="fab fa-html5"></i>
+          <li><p>HTML
+              <i class="fab fa-html5"></i></p>
           </li>
           <li>CSS
             <i class="fab fa-css3-alt"></i>
