--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages </div>
+        <p>
         <ul class="list-inline dev-icons">
-          <li><p>HTML
-              <i class="fab fa-html5"></i></p>
+          <li>HTML
+              <i class="fab fa-html5"></i>
           </li>
           <li>CSS
             <i class="fab fa-css3-alt"></i>
@@ -183,7 +184,7 @@
           </li>
 
         </ul>
-
+      </p>
     </section>
 
     <hr class="m-0">
