--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div>Computer Information Systems</div>
             <p>GPA: 3.62/4.0</p>
           </div>
-          <div class="resume-date text-md-right">
+          <div>
             <span class="text-primary">August 2015 - May 2020 (In Progress)</span>
           </div>
         </div>
